Se modica CSS para que encaje los 5 cuadros, falta terminar

--- a/Ejercicio-Grid-System/index.html
+++ b/Ejercicio-Grid-System/index.html
@@ -40,10 +40,10 @@
 		</div>
 
 		<div class="row">
-			<div class="col-3"><a href="#"><img src="img/dlc.jpg">DLC 83</a></div>
-			<div class="col-3"><a href="#"><img src="img/almanac.jpg">Ihnatko Almanac 149</a></div>
-			<div class="col-3"><a href="#"><img src="img/onthegrid.jpg">On the grid 124</a></div>
-			<div class="col-3"><a href="#"><img src="img/changelog.jpg">Changelog 165</a></div>
+			<div class="col-3 gale-img"><a href="#"><img src="img/dlc.jpg">DLC 83</a></div>
+			<div class="col-3 gale-img"><a href="#"><img src="img/almanac.jpg">Ihnatko Almanac 149</a></div>
+			<div class="col-3 gale-img"><a href="#"><img src="img/onthegrid.jpg">On the grid 124</a></div>
+			<div class="col-3 gale-img"><a href="#"><img src="img/changelog.jpg">Changelog 165</a></div>
 		</div>
 		
 
@@ -54,33 +54,356 @@
 
 
 
+
+
+
+
+
 <section>
-	<div class="container">
 
 
 
-			<div class="row">
 
-				<div class="col-5"><a href="#"><img src="img/thumbs/after-dark.jpg">prueba</a></div>
-				<div class="col-5"><a href="#"><img src="img/thumbs/after-dark.jpg">prueba</a></div>
-				<div class="col-5"><a href="#"><img src="img/thumbs/after-dark.jpg">prueba</a></div>
-				<div class="col-5"><a href="#"><img src="img/thumbs/after-dark.jpg">prueba</a></div>
-				<div class="col-5"><a href="#"><img src="img/thumbs/after-dark.jpg">prueba</a></div>
 
-			</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<div class="container null">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<div class="row">
+
+
+
+
+
+
+
+
+
+		
+	<div class="col-8">
+
+
+
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/after-dark.jpg">
+							Amplified
+							</a>
+						</div>
+
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/amplified.jpg">
+							Back to work
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/back-to-work.jpg">
+							The big show
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/better-know.jpg">
+							Better know
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/cash-corner.jpg">
+							Cash corner
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/changelog.jpg">
+							Changelog
+							</a>
+						</div>
+
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/critical-path.jpg">
+							Critical Path
+							</a>
+						</div>
+
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/dan.jpg">
+							Dan Benjamin Hour
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/home-work.jpg">
+							DLC
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/ihnatko.jpg">
+							Frequency
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/ohyes.jpg">
+							Home Work
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/getting-there.jpg">
+							Ihnatko Almanac
+							</a>
+						</div>
+
+
+
+					<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/movies.jpg">
+							iOhYes
+							</a>
+						</div>
+
+					<div class="col-13 gale-img">
+						<a href="#">
+							<img src="img/thumbs/mac-power.jpg">
+							Getting There
+							</a>
+						</div>
+						<div class="col-13 gale-img">
+							<a href="#">
+							<img src="img/thumbs/on-the-grid.jpg">
+							5by5 at the Movies
+							</a>
+						</div>
+					<div class="col-13 gale-img">
+						<a href="#">
+							<img src="img/thumbs/on-taking-pictures.jpg">
+							Mac Power Users
+							</a>
+						</div>
+
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/latest-paleo.jpg">
+							On the Grid
+							</a>
+						</div>
+					<div class="col-13 gale-img">
+						<a href="#">
+							<img src="img/thumbs/pipeline.jpg">
+							On Taking Pictures
+							</a>
+						</div>
+					<div class="col-13 gale-img">
+								<a href="#">
+							<img src="img/thumbs/pipeline-classic.jpg">
+							Latest in Paleo
+							</a>
+						</div>
+					<div class="col-13 gale-img">
+								<a href="#">
+							<img src="img/thumbs/podcast-method.jpg">
+							Pipeline</a>
+						</div>
+					<div class="col-13 gale-img">
+						<a href="#">
+							<img src="img/thumbs/quit.jpg">
+							Pipeline Classic</a>
+						</div>
+					<div class="col-13 gale-img">
+						<a href="#">
+							<img src="img/thumbs/ruby-on-rails-podcast.jpg">
+							Podcast Method</a>
+						</div>
+					<div class="col-13 gale-img">
+						<a href="#">
+							<img src="img/thumbs/specials.jpg">
+							Quit</a>
+						</div>
+			<div class="col-13 gale-img">
+				<a href="#">
+							<img src="img/thumbs/steady.jpg">
+							Ruby on Rails Podcast</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/supercharged.jpg">
+							5by5 Specials</a>
+						</div>
+			<div class="col-13 gale-img">
+				<a href="#">
+							<img src="img/thumbs/web-ahead.jpg">
+							Steady</a>
+						</div>
+			<div class="col-13 gale-img">
+				<a href="#">
+							<img src="img/thumbs/write-for-life.jpg">
+							Supercharged</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/after-dark.jpg">
+							Web Ahead</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/human-survival.jpg">
+							Write For Your Life</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/morning-dump.jpg">
+							After Dark</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/hablo-geek.jpg">
+							Ankward Human Survival Guide</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/amplified.jpg">
+							Morning Dump</a>
+						</div>
+			<div class="col-13 gale-img">
+				<a href="#">
+							<img src="img/thumbs/puromac.jpg">
+							HabloGeek</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/tech-douchebags.jpg">
+							Puromac</a>
+						</div>
+				<div class="col-13 gale-img">
+					<a href="#">
+							<img src="img/thumbs/after-dark.jpg">
+							Tech Douchebags</a>
+						</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
 	</div>
 
+
+
+
+
+
+
+
+
+
+
+	<div class="col-4">
+	
+	<p>Suscribe to 5by5</p>
+
+
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+	</div>
+
+
+
+
+
+
+
+
+
 </section>
-
-
-
-
-
-
-
 
 
 
