Se modifica html y css, ademas se agrega el footer y ademas se termina el menu

--- a/Ejercicio-Grid-System/index.html
+++ b/Ejercicio-Grid-System/index.html
@@ -10,43 +10,39 @@
 </head>
 <body>
 	
-
-<header>
+<header class="color_container1">
 	<div class="container">
-	<h1><a href="index.html"><img src="img/logo.png" width="100px" height="100px"></a></h1>
-		<nav>
-			<ul>		
-				<li><a href="#">LIVE</a></li>
-				<li><a href="#">SHOWS</a></li>
-				<li><a href="#">SUBCRIBE</a></li>
-				<li><a href="#">SCHEDULE</a></li>
-				<li><a href="#">SUPPORT 5BY5</a></li>
-				<li><a href="#">ADVERTISE</a></li>
-				<li><a href="#">CONTACT</a></li>
-			</ul>
-		</nav>
+		<div class="row">
+			<div class="col-12">
+				<h1><a href="index.html"><img src="img/logo.png" width="50%"></a></h1>
+				<nav>
+					<ul>		
+						<li><a href="#">LIVE</a></li>
+						<li><a href="#">SHOWS</a></li>
+						<li><a href="#">SUBSCRIBE</a></li>
+						<li><a href="#">SCHEDULE</a></li>
+						<li><a href="#">SUPPORT 5BY5</a></li>
+						<li><a href="#">ADVERTISE</a></li>
+						<li><a href="#">CONTACT</a></li>
+					</ul>
+				</nav>
+		
+			</div>
+		</div>
 	</div>
 </header>
 
-
-
-<section class="container_Latest">
+<section class="color_container2">
 	<div class="container">
-
 		<div class="row">
 			<div class="col-12">
-			<p>Latest episodes<a href="#">More episodes<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
+			<p class="lastest_col">Latest episodes <a href="#">More episodes <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
 			</div>
+			<div class="col-3 gale-img2"><a href="#"><img src="img/dlc.jpg">DLC 83</a></div>
+			<div class="col-3 gale-img2"><a href="#"><img src="img/almanac.jpg">Ihnatko Almanac 149</a></div>
+			<div class="col-3 gale-img2"><a href="#"><img src="img/onthegrid.jpg">On the grid 124</a></div>
+			<div class="col-3 gale-img2"><a href="#"><img src="img/changelog.jpg">Changelog 165</a></div>
 		</div>
-
-		<div class="row">
-			<div class="col-3 gale-img"><a href="#"><img src="img/dlc.jpg">DLC 83</a></div>
-			<div class="col-3 gale-img"><a href="#"><img src="img/almanac.jpg">Ihnatko Almanac 149</a></div>
-			<div class="col-3 gale-img"><a href="#"><img src="img/onthegrid.jpg">On the grid 124</a></div>
-			<div class="col-3 gale-img"><a href="#"><img src="img/changelog.jpg">Changelog 165</a></div>
-		</div>
-		
-
 	</div>
 </section>
 
@@ -61,62 +57,11 @@
 
 <section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<div class="container null">
+	
+		<div class="row">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<div class="row">
-
-
-
-
-
-
-
-
-
-		
-	<div class="col-8">
-
-
+			<div class="col-8">
 
 						<div class="col-13 gale-img">
 							<a href="#">
@@ -193,9 +138,6 @@
 							Ihnatko Almanac
 							</a>
 						</div>
-
-
-
 					<div class="col-13 gale-img">
 					<a href="#">
 							<img src="img/thumbs/movies.jpg">
@@ -320,28 +262,6 @@
 							<img src="img/thumbs/after-dark.jpg">
 							Tech Douchebags</a>
 						</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	</div>
 
 
@@ -356,7 +276,77 @@
 
 	<div class="col-4">
 	
-	<p>Suscribe to 5by5</p>
+
+
+
+						<div class="col-12">
+						<h3>Suscribe to 5by5</h3>
+						<div class="cols-redes row">
+							<div class="col-2 top">
+								<img src="img/icons/itunes.png">
+							</div>
+							<div class="col-9 top">
+								<a href="#">5by5 on iTunes</a>
+							</div>
+						</div>
+						<div class="cols-redes row">
+							<div class="col-2">
+							<img src="img/icons/rss.png">	
+							</div>
+							<div class="col-9">
+								<a href="#">Master RSS Feed</a>
+							</div>
+						</div>
+						<div class="cols-redes row">
+							<div class="col-2 col-img">
+								<img src="img/icons/podcast.png">
+							</div>
+							<div class="col-9">
+								<a href="#">Pocket Casts</a>
+							</div>
+						</div>
+						</div>
+
+
+
+						<div class="col-12">
+						<h3>5by5 Apps</h3>
+						<div class="cols-redes row">
+							<div class="col-2 icon-img top">
+								<img src="img/icons/radio.png">
+							</div>
+							<div class="col-9 top">
+								<a href="#">5by5 Radio for IOS</a>
+							</div>
+						</div>
+						<div class="cols-redes row">
+							<div class="col-2 icon-img">
+								<img src="img/icons/pencil.png">
+							</div>
+							<div class="col-9">
+								<a href="#">5by5 for Mac OC X</a>
+							</div>
+						</div>
+						</div>
+
+	
+
+
+						<div class="col-12">
+							<div class="text">
+								<p>Bandwith for July 2015 is</p>
+								<p>sponsored by <span>CacheFly: The</span></p>
+								<p><span>fastest, most reliable CDN in the</span></p>
+								<p><span>business</span></p>
+								</p>
+							</div>
+						</div>
+
+
+
+
+
+
 
 
 	</div>
@@ -407,6 +397,55 @@
 
 
 
+
+<footer class="color_container1">
+
+
+<div class="container">
+	
+<div class="row">
+	
+<div class="col-12">
+<p>5by5 is a podcast network for geeks, designers, developers, gamers, entrepreneurs, and people like you, with shows hosted by people</p>
+<p>including Dan Benjamin, Merlin Hann, Horace Dediu, and Jeffrey Zeldman. <a href="#">Read more...</a></p>
+
+</div>
+
+
+<div class="col-12">
+
+				<nav class="menu_footer">
+					<ul>		
+						<li><a href="#">About</a></li>
+						<li><a href="#">Shows</a></li>
+						<li><a href="#">Subscribe</a></li>
+						<li><a href="#">iTunes</a></li>
+						<li><a href="#">Schedule</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Donate</a></li>
+						<li><a href="#">Advertise</a></li>
+						<li><a href="#">Newsletter</a></li>
+					</ul>
+				</nav>
+
+</div>
+
+
+
+<div class="col-12">
+
+<p class="copyright">Copyright © 2009-2015 by Dan Benjamin and 5by5 Productions LLC in Austion, Texas</p>
+
+</div>
+
+
+
+</div>
+
+
+</div>
+	
+</footer>
 
 
 
